# wcs

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/app/: CMakeLists.txt  app.h  main.cpp  simple_strategy.hpp
test/: CMakeLists.txt
test/fakes/: event_manager.hpp  order_book.hpp  strategy.hpp  virtual_exchange.hpp
test/mocks/: consumer.hpp
test/spies/: consumer.hpp
test/tests/: app.cpp  backtest_engine.cpp  event_manager.cpp  main.cpp  matching_engine.cpp  order_book.cpp  order_controller.cpp  orderbook.cpp
test/tests/entities/: amount.cpp  price.cpp
test/tests/utilits/: side_comprasion.cpp
test/utilits/: event_builder.hpp  side_section.hpp
tests/: CMakeLists.txt
tests/fakes/: matching_engine.hpp  order_book.hpp  order_controller.hpp  order_manager.hpp  virtual_exchange.hpp
tests/mocks/: consumer.hpp
tests/tests/: app.cpp  backtest_engine.cpp  order_controller.cpp
tests/tests/entities/: amount.cpp
tests/tests/utilits/: side_comprasion.cpp
wcs/: CMakeLists.txt
wcs/include/wcs/: backtest_engine.hpp  data_stream.hpp  event_builder.hpp  event_manager.hpp  input_file_stream.hpp  logger.hpp  matching_engine.hpp  order_book.hpp  order_book_update_parser.hpp  order_controller.hpp  order_manager.hpp  orderbook.hpp  strategy.hpp  time_manager.hpp  trade_parser.hpp  virtual_exchange.hpp
wcs/include/wcs/entities/: amount.hpp  id.hpp  level.hpp  order.hpp  price.hpp  side.hpp  time.hpp
wcs/include/wcs/event_manager/: event_manager.hpp  to_backtest_engine.h  to_virtual_exchange.h
wcs/include/wcs/events/: cancel_order.hpp  decrease_level.hpp  event.hpp  events.hpp  fill_order.hpp  freeze_order.hpp  move_order.hpp  move_order_to.hpp  order_book_update.hpp  order_status.hpp  order_update.hpp  orderbook_update.hpp  place_order.hpp  shift_order.hpp  trade.hpp
wcs/include/wcs/parsers/: order_book_update_parser.hpp  trade_parser.hpp
wcs/include/wcs/utilits/: convertors.hpp  debug.hpp  exception.hpp  side_comparison.hpp
wcs/src/: logger.cpp  order_book_update_parser.cpp  order_manager.cpp  trade_parser.cpp
